--- a/css/main.css
+++ b/css/main.css
@@ -282,6 +282,15 @@ body {
 .subtitle.subtitle-header {
   color: #ccc;
 }
+.heading-3 {
+  font-size: 18px;
+  color: #222;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  margin-bottom: 10px;
+  letter-spacing: -0.5px;
+  text-transform: uppercase;
+}
 .service-item {
   text-align: center;
 }
@@ -290,15 +299,6 @@ body {
 }
 .service-icon img {
   height: 50px;
-}
-.service-header {
-  font-size: 18px;
-  color: #222;
-  font-family: Montserrat, sans-serif;
-  font-weight: 700;
-  margin-bottom: 10px;
-  letter-spacing: -0.5px;
-  text-transform: uppercase;
 }
 .service-text {
   font-family: 'Roboto Slab', sans-serif;
@@ -377,6 +377,62 @@ body {
   height: 32px;
   top: 0;
   left: 0;
+}
+.latest-project {
+  display: flex;
+  flex-direction: row;
+  height: 580px;
+  position: relative;
+  overflow: hidden;
+}
+.latest-project-content {
+  width: 530px;
+  position: absolute;
+  top: 0;
+  right: 800px;
+}
+.latest-project-bg {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  right: -900px;
+  background: url(../img/bg/latest-project-img.png);
+  background-repeat: no-repeat;
+}
+.latest-project-list {
+  list-style-type: none;
+  display: inline-block;
+  padding: 0;
+}
+.latest-project-features {
+  margin-top: 25px;
+  margin-bottom: 15px;
+}
+.latest-project-features img {
+  float: left;
+  padding-right: 15px;
+}
+.latest-project-features .heading-3 {
+  text-transform: none;
+  display: inline-block;
+}
+.latest-project-text {
+  color: #777;
+  letter-spacing: -0.5px;
+}
+.latest-project-content a {
+  color: #000;
+  text-decoration: none;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  letter-spacing: -0.5px;
+  text-transform: uppercase;
+  display: inline-block;
+  margin-top: 14px;
+}
+.latest-project-content a:hover {
+  color: #7cc576;
 }
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
