--- a/less/blocks/_headers.less
+++ b/less/blocks/_headers.less
@@ -58,3 +58,13 @@
 .subtitle.subtitle-header {
     color: #ccc;
 }
+
+.heading-3 {
+    font-size: 18px;
+    color: #222;
+    font-family: Montserrat,sans-serif;
+    font-weight: 700;
+    margin-bottom: 10px;
+    letter-spacing: -0.5px;
+    text-transform: uppercase;
+}
