--- a/less/main.less
+++ b/less/main.less
@@ -9,6 +9,7 @@
 @import "blocks/_service-item.less";
 @import "blocks/_special-bg-block.less";
 @import "blocks/_lists.less";
+@import "blocks/_latest.less";
 
 
 @import "libs/normalize.less";
