--- a/less/main.less
+++ b/less/main.less
@@ -10,6 +10,7 @@
 @import "blocks/_special-bg-block.less";
 @import "blocks/_lists.less";
 @import "blocks/_latest.less";
+@import "blocks/_cv.less";
 
 
 @import "libs/normalize.less";
