--- a/less/base/_helpers.less
+++ b/less/base/_helpers.less
@@ -1,3 +1,11 @@
 .margin-bottom-50 {
     margin-bottom: 50px;
 }
+
+.text-center {
+    text-align: center;
+}
+
+.relative {
+    position: relative;
+}
