--- a/less/main.less
+++ b/less/main.less
@@ -11,6 +11,8 @@
 @import "blocks/_lists.less";
 @import "blocks/_latest.less";
 @import "blocks/_cv.less";
+@import "blocks/_reviews.less";
+
 
 
 @import "libs/normalize.less";
