contact+partners+footer+social

--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,9 @@ body {
 .relative {
   position: relative;
 }
+.bg-black {
+  background-color: #222222;
+}
 .bg-grey {
   background-color: #f9f9f9;
 }
@@ -220,7 +223,6 @@ body {
   padding-top: 90px;
 }
 .btn {
-  height: 60px;
   background-color: #7cc576;
   border-radius: 60px;
   padding: 20px 35px;
@@ -504,6 +506,92 @@ body {
   line-height: 36px;
   color: #7cc576;
   margin-bottom: 10px;
+}
+.contact {
+  background-color: #7cc576;
+  padding-bottom: 70px;
+}
+.contact .heading-2 {
+  color: #fff;
+  padding-top: 70px;
+  padding-bottom: 30px;
+}
+.contact .btn {
+  border: #fff solid 2px;
+  border-radius: 10px;
+  padding: 15px 30px;
+}
+.partners {
+  padding: 60px 0;
+}
+.partners img {
+  vertical-align: middle;
+}
+.partners a + a {
+  margin-left: 50px;
+}
+.footer {
+  padding: 60px 0;
+}
+.footer .heading-3 {
+  color: #fff;
+  margin: 0;
+  padding-bottom: 4px;
+}
+.footer ul li span {
+  color: #c5c5c5;
+  padding-left: 15px;
+}
+.footer-content {
+  display: flex;
+  flex-direction: column;
+}
+.footer-text {
+  align-self: center;
+}
+.footer-sharp {
+  align-self: normal;
+  line-height: 22px;
+  font-weight: 700;
+}
+.footer-time {
+  align-self: normal;
+  font-size: 12px;
+  line-height: 22px;
+}
+.footer ul {
+  list-style: none;
+  padding: 0;
+}
+.footer ul li {
+  padding-bottom: 20px;
+  display: flex;
+}
+.footer ul li img {
+  align-self: center;
+}
+.social {
+  display: flex;
+}
+.social span {
+  font-family: Montserrat, sans-serif;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: -0.25px;
+  color: #555555;
+  display: inline-block;
+  padding: 45px 0;
+}
+.social ul {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0;
+  padding-left: 120px;
+}
+.social ul li + li {
+  margin-left: 10px;
 }
 /*! normalize.css v8.0.0 | MIT License | github.com/necolas/normalize.css */
 /* Document
