--- a/less/main.less
+++ b/less/main.less
@@ -12,6 +12,10 @@
 @import "blocks/_latest.less";
 @import "blocks/_cv.less";
 @import "blocks/_reviews.less";
+@import "blocks/_contact.less";
+@import "blocks/_partners.less";
+@import "blocks/_footer.less";
+@import "blocks/_social.less";
 
 
 
