--- a/less/blocks/_partners.less
+++ b/less/blocks/_partners.less
@@ -4,6 +4,11 @@
 
 .partners img {
     vertical-align: middle;
+    border: 2px solid #fff;
+
+    &:hover {
+        border-color: yellowgreen;
+    }
 }
 
 .partners a + a {
