--- a/less/blocks/_buttons.less
+++ b/less/blocks/_buttons.less
@@ -16,4 +16,10 @@
     text-transform: uppercase;
 
     text-shadow: 0px 1px 1px rgba(34, 129, 26, 1);
+
+
+    &:hover {
+        background-color: yellowgreen;
+    }
+    
 }
