--- a/less/blocks/_footer.less
+++ b/less/blocks/_footer.less
@@ -6,6 +6,10 @@
     color: #fff;
     margin: 0;
     padding-bottom: 4px;
+
+    @media (max-width: 940px) {
+        text-align: center;
+    }
 }
 
 .footer ul li span {
