--- a/less/blocks/_social.less
+++ b/less/blocks/_social.less
@@ -1,5 +1,10 @@
 .social {
     display: flex;
+    overflow: hidden;
+
+    @media (max-width: 940px) {
+        flex-direction: column;
+    }
 }
 
 .icon-circle {
@@ -20,6 +25,11 @@
     color: #555555;
     display: inline-block;
     padding: 45px 0;
+
+    @media (max-width: 940px) {
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
 
 .social ul {
@@ -29,6 +39,12 @@
     align-items: center;
     padding: 0;
     padding-left: 120px;
+
+    @media (max-width: 940px) {
+        padding-left: 0;
+        margin-left: auto;
+        margin-right: auto;
+    }
 
     li a:hover {
         border-color: yellowgreen;
